# Course-work-oop

./: CMakeLists.txt
include/: ExportStrategy.h  Observable.h
include/decorator/: PriorityTaskDecorator.h  TaskDecorator.h
include/entity/category/: Category.h
include/entity/command/: Command.h  CreateTaskCommand.h
include/entity/handler/: Handler.h
include/entity/logger/: Logger.h
include/entity/menu/: Menu.h
include/entity/observer/: Observer.h
include/entity/project/: Project.h
include/entity/reminder/: Reminder.h
include/entity/rules/: RionRule.h
include/entity/task/: TadTask.h  Task.h  TaskStatus.h
include/entity/user/: User.h
include/factory/: TadTaskFactory.h  TaskFactory.h
include/service/: AnalyticsExport.h  DatabaseExport.h  ExportService.h  TaskHandler.h  TaskManager.h
src/: main.cpp
src/entity/category/: Category.cpp
src/entity/menu/: menu.cpp
src/entity/user/: User.cpp
src/service/: AnalyticsExport.cpp  DatabaseExport.cpp
